--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,8 @@ environment:
   sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
-  analyzer: ^6.0.0
-  custom_lint_builder: ^0.6.0
+  analyzer: '>=6.0.0 <8.0.0'
+  custom_lint_builder: '>=0.6.0 <1.0.0'
   path: ^1.9.0
 
 dev_dependencies:
